# static_analysis

./: .gitignore  CobolParser.py  CobolVisitor.py  FlowAnalyzer.py  FlowChartGenerator.py  IdentificationDivision.py  ParseProcedureDivision copy.py  ParseProcedureDivision.py  PreprocessorVisitor.py  build.ps1  context_info.py  custom_error_listener.py  flow_diagram.puml  logger.py  main.py  output.plu  parse_cobol.py  parse_identification_division.py  parse_linkage_section.py  parse_procedure_division.py  parse_statements.py  parse_tree.dot  parse_working_storage_section.py  preprocess_cobol.py  readme.md  requirements.txt  sequence.plu
Samples/: DOGEDEET.cbl  (+6 more)
src/: pyproject.toml
src/static_analysis/: logger.py  logger_builder.py
src/static_analysis/cobol_parser/: cobol_parser.py  convert_to_c_structs.py  logger.py  parse_cobol.py  parse_identification_division.py  parse_linkage.py  parse_procedure_division.py  parse_statements.py  parse_working_storage.py
src/static_analysis/cobol_parser/Documentation/: COBOL Codebase Analysis.md  Static Analysis Guide.md  sample_export.md
src/static_analysis/cobol_parser/Samples/: DOGESEND.cbl  DOGETRAN.cbl  Fibonacci Sequence.cbl
src/static_analysis/cobol_parser/grammars/: Cobol85.interp  Cobol85Lexer.py  Cobol85Lexer.tokens  Cobol85PreprocessorListener.py  Cobol85PreprocessorParser.py  (+1 more)
src/static_analysis/diagrams/: gen_diagram.py  logger.py  parse_json.py  sequence.py  swimlane.py
src/static_analysis/process_results/: DOGEMAIN.json  analyze_program.py  db_connection.py  db_context.py  logger.py  process.py  queries.py
(+58 files in other folders)
